regression/tests/bugfixes/iptables-inline.conf
#
# Check that protections against direct use of iptables commands are
# functional.
#

. ${REGRESSDIR}include/regression.conf

interface eth0 test
	policy drop
	iptables -N chain4a
	/sbin/iptables -N chain4b
if ipv6_capable; then
	ip6tables -N chain6a
	/sbin/ip6tables -N chain6b
fi


check_results_script() {
  local tmpdir="${1}"
  local status="${2}"
  local logfile="${3}"
  local v4output="${4}"
  local v6output="${5}"
  shift; shift; shift; shift; shift;

  local expected_status=0
  if [ $status -ne $expected_status ]
  then
    echo "Unexpected status $status (expected $expected_status)"
    return 1
  fi

  tail -n 2 "${logfile}" > $tmpdir/$$.log || return 1
  if ! grep -q "[aA]ctivating new firewall[^:]*: OK$" $tmpdir/$$.log
  then
    echo "Log did not end as expected (with firewall activation)"
    return 1
  fi
  return 0
}

audit_results_ipv4() {
#
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:chain4a - [0:0]
:chain4b - [0:0]
:in_test - [0:0]
:out_test - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j in_test
-A INPUT -m conntrack --ctstate RELATED -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,ACK -j DROP
-A INPUT -m limit --limit 1/sec -j LOG --log-prefix "IN-unknown:"
-A INPUT -j DROP
-A FORWARD -m conntrack --ctstate RELATED -j ACCEPT
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,ACK -j DROP
-A FORWARD -m limit --limit 1/sec -j LOG --log-prefix "PASS-unknown:"
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -j out_test
-A OUTPUT -m conntrack --ctstate RELATED -j ACCEPT
-A OUTPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,ACK -j DROP
-A OUTPUT -m limit --limit 1/sec -j LOG --log-prefix "OUT-unknown:"
-A OUTPUT -j DROP
-A in_test -m conntrack --ctstate RELATED -j ACCEPT
-A in_test -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,ACK -j DROP
-A in_test -m limit --limit 1/sec -j LOG --log-prefix "IN-test:"
-A in_test -j DROP
-A out_test -m conntrack --ctstate RELATED -j ACCEPT
-A out_test -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,ACK -j DROP
-A out_test -m limit --limit 1/sec -j LOG --log-prefix "OUT-test:"
-A out_test -j DROP
COMMIT
#
#
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A INPUT -m conntrack --ctstate NEW -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A POSTROUTING -m conntrack --ctstate NEW -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
COMMIT
#
#
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
#
}

audit_results_ipv6() {
#
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:chain6a - [0:0]
:chain6b - [0:0]
:in_test - [0:0]
:out_test - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j in_test
-A INPUT -m conntrack --ctstate RELATED -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,ACK -j DROP
-A INPUT -m limit --limit 1/sec -j LOG --log-prefix "IN-unknown:"
-A INPUT -j DROP
-A FORWARD -m conntrack --ctstate RELATED -j ACCEPT
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,ACK -j DROP
-A FORWARD -m limit --limit 1/sec -j LOG --log-prefix "PASS-unknown:"
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -j out_test
-A OUTPUT -m conntrack --ctstate RELATED -j ACCEPT
-A OUTPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,ACK -j DROP
-A OUTPUT -m limit --limit 1/sec -j LOG --log-prefix "OUT-unknown:"
-A OUTPUT -j DROP
-A in_test -m conntrack --ctstate RELATED -j ACCEPT
-A in_test -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,ACK -j DROP
-A in_test -m limit --limit 1/sec -j LOG --log-prefix "IN-test:"
-A in_test -j DROP
-A out_test -m conntrack --ctstate RELATED -j ACCEPT
-A out_test -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,ACK -j DROP
-A out_test -m limit --limit 1/sec -j LOG --log-prefix "OUT-test:"
-A out_test -j DROP
COMMIT
#
#
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A INPUT -m conntrack --ctstate NEW -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A POSTROUTING -m conntrack --ctstate NEW -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
COMMIT
#
#
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
#
}
